# interpolator

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  interpolator_test.ipynb  main.py  pyproject.toml
backend/fivedreg/: __init__.py  data.py  model.py  utils.py
backend/task8/: __init__.py  config.py  experiments.py  profiling.py  run_task8.py  visualization.py
backend/tests/: test_backend_utils.py  test_backend_utils_enhanced.py  test_core.py  test_coverage_completion.py  test_endpoints.py  test_load.py  test_model_lifecycle.py
docs/source/: changelog.rst  conf.py  examples.rst  index.rst
docs/source/api/: data.rst  endpoints.rst  model.rst  utils.rst
docs/source/performance/: benchmarks.rst  full_performance_analysis.rst  optimization.rst  profiling.rst
docs/source/user_guide/: api_usage.rst  prediction.rst  training.rst
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: build-docs.sh  docker-logs.sh  docker-start.sh  docker-stop.sh  serve-docs.sh  test-pipeline.sh
