[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fivedreg"
version = "0.1.0"
description = "Neural network 5D regression package with FastAPI backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = Iuliia Vitiugova}
]
keywords = [
    "regression",
    "neural-network",
    "interpolation",
    "pytorch",
    "fastapi",
    "machine-learning",
    "5d-regression"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# Core runtime dependencies
dependencies = [
    "numpy>=1.24.0,<2.0",
    "torch>=2.0.0",
    "torchmetrics>=1.0.0",
    "fvcore>=0.1.5",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.25.0",

    # Documentation
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=1.3.0,<3.0.0",
    "sphinx-autodoc-typehints>=1.24.0",

    # Visualization and analysis
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Profiling and monitoring
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",

    # Advanced metrics (optional)
    "wandb>=0.16.0",

    # Scientific computing
    "scipy>=1.10.0",

    # Jupyter notebooks
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
]

# Minimal dependencies for testing only
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.25.0",
]

# Documentation building only
docs = [
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=1.3.0,<3.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# API server dependencies
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

# All optional dependencies
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.25.0",
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=1.3.0,<3.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
    "wandb>=0.16.0",
    "torchmetrics>=1.0.0",
    "fvcore>=0.1.5",
    "scipy>=1.10.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fivedreg*"]
exclude = ["tests*", "docs*", "notebooks*", "data*", "models*"]

[tool.setuptools.package-data]
fivedreg = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=fivedreg",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["fivedreg"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Black code formatting
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "wandb.*",
    "scipy.*",
]
ignore_missing_imports = true
